First push to git

--- a/index.html
+++ b/index.html
@@ -3,16 +3,35 @@
     <link rel="stylesheet" href="./index.css">
   </head>
   <body>
-    <h1>My name is Yujin</h1>
+    <div class="dog">
+      <div class="my-div-one">
+        <h1>My name is Yujin</h1>
 
-    <p>This is my first page</p>
+        <p class="yiro">Love you my girl</p>
+      </div>
 
-    Hello, world!
-    </br>
-    Yujin is beautiful~
+      <div class="my-div-two">
+        <p>Tonta</p>
+        <p>Tonto</p>
+      </div>
 
-    <div>Tonta</div>
-    <img src="https://source.unsplash.com/random">
-    <div>Tonto</div>
+
+      <div class="my-div-three">
+        <img class="my-image" src="https://source.unsplash.com/random">
+      </div>
+
+
+    </div>
   </body>
 </html>
+
+<div>
+  <img class="my-image" src="https://source.unsplash.com/random">
+  <img class="my-image" src="https://source.unsplash.com/random">
+  <img class="my-image" src="https://source.unsplash.com/random">
+</div>
+
+<div class="footer">
+  <p class="white-letter">Gift</p>
+  <p class="white-letter">Cards</p>
+</div>
